--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ left: 100px;
 #white{
     width: 300px;
     height: 110px;
-    position; absolute;
+    position:absolute;
     top:500px;
     background-color: white;
     z-index: index 100000px;;
