css update position relative

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ left: 100px;
     width: 100px;
     height: 100px;
     background-color: black;
+    position: relative;
     animation: slide 1s infinite;
 }
 @keyframes slide{
