--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ left: 100px;
     height: 100px;
     background-color: black;
     position: relative;
-    animation: slide 1s infinite;
+    top: 500px;
+    animation: slide 1s infinite linear;
 }
 @keyframes slide{
     0%{top:-100px};
