--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ left: 100px;
     background-color: black;
     position: relative;
     top: 500px;
-    animation: alternate-reverse;
+    animation: slide 1s infinite linear;
 }
-@keyframes alternate-reverse{
+@keyframes slide{
     0%{top:-100px};
     1000%{top:-500px};
 }
